--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "isit-site-tools",
+    "name": "isit-site-tools-vu",
     "version": "1.0.0",
     "description": "Isit tooling for building web sites",
     "main": "index.js",
@@ -20,7 +20,7 @@
     "keywords": [
         "markdown"
     ],
-    "author": "Charlie Calvert",
+    "author": "Angela Vu",
     "license": "MIT",
     "dependencies": {
         "highlight.js": "^9.12.0",
